# edgehog-esp32-device

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Kconfig  Makefile  README.md  idf_component.yml
.github/workflows/: build.yaml  clang-format.yaml  docs-workflow.yaml  publish.yaml  test.yaml
.reuse/: dep5
components/core/: CMakeLists.txt  Kconfig
components/core/include/: core.h
components/core/include/wifi/: core_wifi.h
components/core/src/: core.c
components/core/src/wifi/: core_wifi.c
components/devman/: CMakeLists.txt  component.mk
components/devman/include/: astarte_handler.h  devman.h
components/devman/include/data/: devman_data.h
components/devman/src/: astarte_handler.c  devman.c
doc/: docmain.dox  edgehog-device-sdk-esp32.doxy  edgehog-device-sdk-esp32.doxy.license
examples/edgehog_app/: CMakeLists.txt  Makefile  README.md  edgehog_partition_example.csv  sdkconfig.defaults
examples/edgehog_app/main/: CMakeLists.txt  Kconfig.projbuild  component.mk  idf_component.yml  main.c
examples/edgehog_app/main/include/: example_task.h  wifi.h  wifi_cfg.h
examples/edgehog_app/main/src/: example_task.c  wifi.c  wifi_cfg.c
examples/edgehog_app/test/: CMakeLists.txt  Makefile
examples/edgehog_app/test/main/: test_main.c
include/: edgehog.h  edgehog_battery_status.h  edgehog_cellular_connection.h  edgehog_device.h  edgehog_event.h  edgehog_geolocation.h  edgehog_network_interface.h
main/: main.c
private/: edgehog_base_image.h  edgehog_battery_status_p.h  edgehog_command.h  edgehog_device_private.h  edgehog_geolocation_p.h  edgehog_led.h  edgehog_os_bundle.h  edgehog_os_info.h  edgehog_ota.h  edgehog_runtime_info.h  edgehog_storage_usage.h  edgehog_telemetry.h
src/: edgehog.c  edgehog_base_image.c  edgehog_battery_status.c  edgehog_cellular_connection.c  edgehog_command.c  edgehog_device.c  edgehog_geolocation.c  edgehog_led.c  edgehog_network_interface.c  edgehog_os_bundle.c  edgehog_os_info.c  edgehog_ota.c  edgehog_runtime_info.c  edgehog_storage_usage.c  edgehog_telemetry.c
test/: CMakeLists.txt  component.mk  test_edgehog_device.c  test_edgehog_device_telemetry.c
test/app_test/: CMakeLists.txt  Makefile  README.md  pytest.ini  sdkconfig  test_edgehog.py
test/app_test/main/: CMakeLists.txt  test_main.c
